# micro-learn

./: .env.example  .gitignore  DEPLOY.md  LOCAL_TESTING.md  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt  run.sh  test_extract.py  test_gemini.py  test_new_sources.py
alembic/: env.py
alembic/versions/: 2b48236c5413_initial_tables.py
app/: config.py  main.py  prompts.py
app/api/: dependencies.py  routes.py
app/models/: __init__.py  database.py  models.py
app/schemas/: __init__.py  schemas.py
app/services/: __init__.py  activity_service.py  auth_service.py  exceptions.py  extractor.py  learning_processor.py  review_service.py  spaced_repetition.py
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
frontend/components/: AchievementUnlock.tsx  AppShell.tsx  AuthGuard.tsx  AutoSharePrompt.tsx  CardEditorModal.tsx  CreateDeckModal.tsx  EmailVerifyBanner.tsx  ErrorBoundary.tsx  ImageLightbox.tsx  LanguagePicker.tsx  LevelUpModal.tsx  NewModuleModal.tsx  OfflineBanner.tsx  PageTransition.tsx  ProcessingAnimation.tsx  ProgressDashboard.tsx  RTLProvider.tsx  ResumePrompt.tsx  ShareableSnapshot.tsx  Sidebar.tsx  Skeleton.tsx  XPPopup.tsx
frontend/lib/: LocaleContext.tsx  OfflineContext.tsx  SidebarContext.tsx  XPContext.tsx  api.ts  haptics.ts  i18n.ts  offlineStorage.ts  sm2.ts  sourceIcons.ts  syncService.ts
tests/: conftest.py  test_api.py  test_extractor.py  test_learning_processor.py  test_spaced_repetition.py
(+25 files in other folders)
